# satcom-sim

./: .gitignore  CMakeLists.txt  Makefile  QUICKSTART.md  README.md
include/: commands.hpp  crc.hpp  ground_station.hpp  link.hpp  packet.hpp  satellite.hpp  telemetry.hpp  thread_safe_queue.hpp
scripts/: run_examples.sh
src/: crc.cpp  ground_station.cpp  link.cpp  main.cpp  packet.cpp  satellite.cpp
tests/: CMakeLists.txt  basic_tests.cpp
